cncProd/force-app/main/default/objects/Agenda__c/Agenda__c.object-meta.xml
<CustomObject>
    <label>Agenda</label>
    <nameField>
        <displayFormat>AG -{000000}</displayFormat>
        <label>Agenda Count</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>