cncProd/force-app/main/default/objects/Agenda__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Issues</fullName>
            </value>
            <value>
                <fullName>Operational Issues</fullName>
            </value>
            <value>
                <fullName>Previous duty day sales activity review</fullName>
            </value>
            <value>
                <fullName>Appointment for the day</fullName>
            </value>
            <value>
                <fullName>Performance variance (Once a week)</fullName>
            </value>
            <value>
                <fullName>Executive message</fullName>
            </value>
            <value>
                <fullName>Sales performance &amp; targets</fullName>
            </value>
            <value>
                <fullName>Trading memo</fullName>
            </value>
            <value>
                <fullName>Marketing updates</fullName>
            </value>
            <value>
                <fullName>Industry updates, if applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>