cncProd/force-app/main/default/objects/Agenda__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agendas</relationshipName>
    <type>Lookup</type>
</CustomField>