cncProd/force-app/main/default/objects/Agenda__c/fields/Meeting_Log_V2__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Log_V2__c</fullName>
    <label>Meeting Log</label>
    <referenceTo>Meeting_Log_V2__c</referenceTo>
    <relationshipLabel>Agendas</relationshipLabel>
    <relationshipName>Agendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>